# 2D-robot-simulator

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  bindings.idl  code  editor.js  preRun.js  shell.css  shell.html  sim.data  sim.html  sim.js  sim.wasm  syms.txt
.circleci/: config.yml
.github/workflows/: azure-static-web-apps-agreeable-ocean-0a407871e.yml
arduino_examples/: CMakeLists.txt  blink_no_delay.cpp  examples.json  hello.cpp  hello.ino  welcome.ino
data/levels/: oval.json  rectangle.json
docs/: code  compile.js  editor.js  index.css  index.html  index.js  sim.data  sim.html  sim.js  sim.wasm
docs/examples/: move.ino  simple_line_follower.ino
examples/: blink_no_delay.ino  examples.json  move.ino
src/: Arduino.cpp  Arduino.h  Arduino.tcc  L298N_MotorController.cpp  L298N_MotorController.hpp  app.cpp  app.hpp  bindingsWrapper.cpp  contactListener.cpp  contactListener.hpp  contactable.hpp  export.hpp  input.hpp  led.cpp  led.hpp  level.cpp  level.hpp  lineSensor.cpp  lineSensor.hpp  main.cpp  output.hpp  pinDirection.hpp  pinsController.cpp  pinsController.hpp  robot.cpp  robot.hpp  tape.cpp  tape.hpp  tire.cpp  tire.hpp
src/compile_server/: Dockerfile  Gemfile  config.ru  server.rb  start.sh
tests/: pinsControllerTests.cpp  robotsim.py  test_web.py
web/: compile.js  editor.js  index.css  index.html  index.js  postRun.js  preRun.js  shell.css  shell.html
